[gd_scene load_steps=20 format=3 uid="uid://bavt7mnbdvboh"]

[ext_resource type="Script" path="res://Scenes/ui_elements/upgrade_smog_absorber/upgrade_smog_absorber_button.gd" id="1_6lq2b"]
[ext_resource type="Texture2D" uid="uid://g0d811r18s3o" path="res://Assets/ui/icons/80px/h2o3_80px.png" id="2_84i82"]
[ext_resource type="Texture2D" uid="uid://xthvnnerghmo" path="res://Assets/ui/icons/80px/energy_80px.png" id="3_f3ili"]
[ext_resource type="Texture2D" uid="uid://b5dg55jj78uk2" path="res://Assets/ui/icons/80px/minerals3_80px.png" id="4_mgoqf"]
[ext_resource type="Texture2D" uid="uid://cadns3o55oy1m" path="res://Assets/particles/kenney_particle-pack/PNG (Transparent)/light_03.png" id="5_st3jy"]
[ext_resource type="Texture2D" uid="uid://c7nibywqma1wa" path="res://Assets/particles/kenney_particle-pack/PNG (Transparent)/circle_01.png" id="6_xfspn"]
[ext_resource type="Texture2D" uid="uid://d2wci5g70w52u" path="res://Assets/particles/kenney_particle-pack/PNG (Transparent)/light_02.png" id="7_f4h7s"]
[ext_resource type="Texture2D" uid="uid://bkppjwkh2y5ld" path="res://Assets/particles/kenney_particle-pack/PNG (Transparent)/circle_03.png" id="8_4o6vk"]
[ext_resource type="Texture2D" uid="uid://uh2ce5de5j7v" path="res://Assets/particles/kenney_particle-pack/PNG (Transparent)/muzzle_04.png" id="9_5i46n"]
[ext_resource type="Texture2D" uid="uid://dommxqpae2nbs" path="res://Assets/ui/icons/100px/arrow_l1.png" id="9_ntq50"]

[sub_resource type="Animation" id="Animation_2qnf7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cost_panel:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("cost_panel:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("info_panel:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("info_panel:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("upgrade_name:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Control:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_4u52e"]
resource_name = "fly_off"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticlesJet")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"restart"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.246091]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.7),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"hide"
}]
}

[sub_resource type="Animation" id="Animation_n3bwu"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cost_panel:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1.62451, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cost_panel:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("info_panel:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.4),
"transitions": PackedFloat32Array(1, 2.21914, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("info_panel:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("upgrade_name:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.3, 1.3), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Control:scale")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 0.732043, 1.93187),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qmrtd"]
_data = {
"RESET": SubResource("Animation_2qnf7"),
"fly_off": SubResource("Animation_4u52e"),
"show": SubResource("Animation_n3bwu")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wjxcd"]
blend_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_larla"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_53p3e"]
offsets = PackedFloat32Array(0, 0.179688, 0.244792, 0.447917, 0.903646, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0.842131, 1, 1, 1, 0.931298, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_y25a0"]
gradient = SubResource("Gradient_53p3e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_n85u7"]
lifetime_randomness = 0.27
particle_flag_align_y = true
particle_flag_disable_z = true
angle_min = -181.2
angle_max = 193.7
spread = 87.56
gravity = Vector3(0, 0, 0)
scale_min = 0.55
scale_max = 1.45
color = Color(1, 1, 1, 0.556863)
color_ramp = SubResource("GradientTexture1D_y25a0")
hue_variation_min = -0.05

[node name="UpgradeSmogAbsorberButton" type="Node2D"]
z_index = 220
z_as_relative = false
script = ExtResource("1_6lq2b")
metadata/_edit_horizontal_guides_ = [-154.0, 158.0]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qmrtd")
}

[node name="cost_panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 128.0
offset_top = -154.0
offset_right = 458.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(165, 154)
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="cost_panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="cost_panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="cost_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Medium"
text = "Upgrade cost"
horizontal_alignment = 1
vertical_alignment = 1

[node name="h2o" type="HBoxContainer" parent="cost_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="cost_panel/MarginContainer/VBoxContainer/h2o"]
layout_mode = 2
texture = ExtResource("2_84i82")
expand_mode = 2

[node name="Label3" type="Label" parent="cost_panel/MarginContainer/VBoxContainer/h2o"]
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Small"
text = "1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="energy" type="HBoxContainer" parent="cost_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="cost_panel/MarginContainer/VBoxContainer/energy"]
layout_mode = 2
texture = ExtResource("3_f3ili")
expand_mode = 2

[node name="Label3" type="Label" parent="cost_panel/MarginContainer/VBoxContainer/energy"]
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Small"
text = "2000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="minerals" type="HBoxContainer" parent="cost_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="cost_panel/MarginContainer/VBoxContainer/minerals"]
layout_mode = 2
texture = ExtResource("4_mgoqf")
expand_mode = 2

[node name="Label3" type="Label" parent="cost_panel/MarginContainer/VBoxContainer/minerals"]
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Small"
text = "300"
horizontal_alignment = 1
vertical_alignment = 1

[node name="info_panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -468.0
offset_top = -154.0
offset_right = -138.0
offset_bottom = 158.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(165, 154)
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="info_panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="info_panel/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="info_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Medium"
text = "Transform"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description_text" type="Label" parent="info_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Small"
text = "Smog => Acid; Minerals"
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="info_panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Label3" type="Label" parent="info_panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"Upgrade_Panel_Label_Small"
text = "Eats"
horizontal_alignment = 1

[node name="r2" type="HBoxContainer" parent="info_panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="info_panel/MarginContainer/VBoxContainer/HBoxContainer/r2"]
layout_mode = 2
texture = ExtResource("3_f3ili")
expand_mode = 2

[node name="Label3" type="Label" parent="info_panel/MarginContainer/VBoxContainer/HBoxContainer/r2"]
layout_mode = 2
theme_type_variation = &"Upgrade_Panel_Label_Small"
text = "0.5 / tick"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(20, 20)
mouse_filter = 1

[node name="button_scale" type="Control" parent="Control"]
modulate = Color(1, 0.494118, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.45, 0.45)
mouse_filter = 1

[node name="UpgradeButton_BG" type="TextureRect" parent="Control/button_scale"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_st3jy")

[node name="UpgradeButton" type="TextureButton" parent="Control/button_scale"]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_wjxcd")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("6_xfspn")
texture_pressed = ExtResource("7_f4h7s")
texture_hover = ExtResource("8_4o6vk")
stretch_mode = 4

[node name="ArrowL1" type="Sprite2D" parent="Control/button_scale"]
material = SubResource("CanvasItemMaterial_larla")
scale = Vector2(3.907, 3.282)
texture = ExtResource("9_ntq50")
flip_v = true

[node name="GPUParticlesJet" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
z_index = 90
z_as_relative = false
position = Vector2(0, 380)
amount = 5
process_material = SubResource("ParticleProcessMaterial_n85u7")
texture = ExtResource("9_5i46n")
lifetime = 0.2
randomness = 0.51

[node name="upgrade_name" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -337.0
offset_top = -273.0
offset_right = 337.0
offset_bottom = -186.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(337, 43.5)
theme_type_variation = &"Upgrade_Panel_Lable_Big"
text = "Upgrade: Smog transformer"
